--- a/Harry Potter And The Deathly Hallows/Info.plist
+++ b/Harry Potter And The Deathly Hallows/Info.plist
@@ -38,5 +38,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string></string>
+	</array>
 </dict>
 </plist>
